product_docs/docs/migration_portal/3.5.0/04_mp_migrating_database/02_mp_schema_assessment.mdx
---
title: "Performing a schema assessment"


legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/edb-postgres-migration-portal/user-guides/user-guide/3.0.1/mp_schema_assessment.html"
---

<div id="mp_schema_assessment" class="registered_link"></div>

You can assess an Oracle database schema for compatibility with EDB Postgres Advanced Server. You can also generate a report about the assessment.

## Perform a schema assessment

1.  Navigate to the [Migration Portal](https://migration.enterprisedb.com).

2.  Enter your EDB credentials.

3.  Select `New` to create a project.

![The Migration Portal New project dialog.](../images/mp_schema_assessment_new_project_edited.png)

4.  In the dialog box, enter the project name in the **Project name** field.

5.  Specify project details:

    -   Select the application interface.
    -   Select a source DB and version for the source.
    -   Select the target DB and Version for the target.

6.  To upload the .SQL file generated by the Data Pump utility, select **Choose file**.

    !!! Note
        -   Don't modify the `.SQL` file.
            
    For more information, see [Schema extraction](01_mp_schema_extraction/#mp_schema_extraction).

7.  To specify an index prefix (`idx`) when creating a project, select the **Add Index Prefix** box. This selection ensures better assessment results, as EDB Postgres Advanced Server doesn't support the same name for tables and indexes.

8.  Select **Create & assess** to create a new project and to assess the schemas.

 The analysis tool reviews every construct and executes repair actions to improve compatibility with EDB Postgres Advanced Server. It flags any remaining errors that require manual intervention.

![The Schema analysis result.](../images/mp_schema_assessment_analysis_result.png)


9.  Verify the DDL objects (e.g., TABLES) that don't show a 100% success ratio.

![Verifying the DDL objects.](../images/mp_schema_assessment_verifying_ddl.png)

10. Select the objects that aren't compatible with EDB Postgres Advanced Server and view the details. At the bottom of the middle panel, you can view repair action details.

![Incompatible objects are identified.](../images/mp_schema_assessment_incompatible.png)

11. Refer to the Knowledge Base information in the right panel to locate the possible workarounds for the objects that aren't immediately compatible with EDB Postgres Advanced Server. You can also view the Knowledge Base information on the Portal wiki page.

![Assessment result with errors.](../images/mp_schema_assessment_errors.png)

12. On the **Knowledge Base** tab, you can enter the error message for the incompatible objects with EDB Postgres Advanced Server and select **Search**.

    The object detail panel displays the workaround or the resolution for the failed object. You can manually make the changes on the **Assessment** tab for that object and select **Reassess**.

!!! Note
    If any failed object passes while reassessing, the dependent objects for that object are also reassessed.

![Workaround or resolution for incompatible objects.](../images/mp_schema_assessment_workaround.png)

Similarly, you can make all incompatible objects compatible.

!!! Note
    If the information or workaround for incompatible objects isn't available in the Knowledge Base, contact the support team for help.

When you have finished working with the DDL, you can either download the modified EDB compatible DDL as a `.sql` file or migrate the schemas. See [Schema migration](03_mp_schema_migration/#mp_schema_migration).

<div id="mp_report" class="registered_link"></div>

## Generate an assessment report

Migration Portal reports provides a high-level assessment summary of the schemas assessed for your project. In addition, the report provides details about the failed objects and the cause of failure.

1.  Select **Report**.

2.  Select the schemas to include in the report.

3.  To generate the onscreen report, select **Generate**.

You can optionally select **Generate PDF** to save the report in PDF format. You can also view the count of distinct repair handlers applied to the DDLs under the selected schemas.
